@@ -1,3 +1,8 @@
+2011-09-21  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-handle-shell-command): Set process sentinel and
+	process filter, as done also in `shell-command'.
+
 2011-09-19  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-inline-compress-commands): Add "xz".
